# AnyDoc2MD

./: .gitattributes  .gitignore  AnyDoc2MD.code-workspace  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  anydoc2md.spec  build_entry.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_anydoc2md.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-packages.yml  ci.yml
anydoc2md/: __init__.py  __main__.py  arabic.py  config.py  converter.py  email_convert.py  gui.py  ocr.py  safety.py  text_utils.py
scripts/: prepare_vendor.py
tests/: test_arabic.py  test_converter.py  test_email_convert.py  test_safety.py  test_text_utils.py
